[package]
name = "wallet-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.6"
tiny-bip39 = "1.0.0"
bitcoin = "0.31.1"
hex = "*"
rand = "*"
actix-web = "4.4.1"
async-trait = "0.1.76"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version="1.0.193", features=["derive"]}
uuid = "1.6.1"
validator ={version = "0.16.1", features=["derive"]}
log = "0.4.11"
env_logger = "0.11.1"
actix-web-httpauth = "0.8.1"
alcoholic_jwt = "4091.0.0"
anyhow = "1.0"
chrono = "0.4.19"